@@ -275,7 +275,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
 
 <strong>Note</strong> <a name="gs815"></a>
 LilyPond 2.5 requires version 8.15 or newer of <a
-href="http://www.cups.org/articles.php?L216">Ghostscript</a>.
+href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
 
 
 <a name="2.5"></a>
@@ -326,7 +326,7 @@ href="http://www.cups.org/articles.php?L216">Ghostscript</a>.
 	<a
 	   href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.5.21-1.i386.rpm">documentation</a>,
 	<a
-	   href="http://lilypond.org/download/binaries/Fedora-3/ghostscript-8.15rc2-3.i386.rpm">ghostscript</a>
+	   href="http://lilypond.org/download/binaries/Fedora-3/ghostscript-8.15rc3-1.i386.rpm">ghostscript</a>
 	   </strong>
       (<a href="#gs815">NOTE</a>)
     </td>
